--- a/Asignacion05_05_21/express-app1/.env
+++ b/Asignacion05_05_21/express-app1/.env
@@ -1,5 +1,6 @@
-SERVER_PORT=3501
-POSTGRES_HOST=localhost
+SERVER_PORT=3542
+SERVER_HOST= 127.0.0.1
+POSTGRES_HOST="localhost"
 POSTGRES_PORT=5432
 POSTGRES_USERNAME=postgres 
 POSTGRES_PASSWORD=admin
