--- a/Asignacion06_05_21/express-app1/.env
+++ b/Asignacion06_05_21/express-app1/.env
@@ -1,6 +1,7 @@
-SERVER_PORT=3501
-POSTGRES_HOST=localhost
+SERVER_PORT=3104
+SERVER_HOST= 127.0.0.1
+POSTGRES_HOST="localhost"
 POSTGRES_PORT=5432
 POSTGRES_USERNAME=postgres 
 POSTGRES_PASSWORD=admin
-POSTGRES_DATABASE=express_app1
+POSTGRES_DATABASE=express_app3
