--- a/Asignacion06_05_21/express-app1/package.json
+++ b/Asignacion06_05_21/express-app1/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "init": "tsc --init",
-    "start": "ts-node-dev src/server.ts"
+    "start": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
